[package]
name = "stash-lookup"
version = "0.1.0"
edition = "2024"

[profile.release]
opt-level = "z"
lto = true
codegen-units = 1
strip = true

[dependencies]
axum = { version = "0.8", features = ["json"] }
sqlx = { version = "0.8", features = ["runtime-tokio", "sqlite", "migrate", "uuid"] }
tokio = { version = "1", features = ["rt-multi-thread", "net", "sync", "macros", "signal"] }
uuid = { version = "1", features = ["serde"], default-features = false }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
anyhow = "1"
reqwest = { version = "0.12", default-features = false, features = ["rustls-tls", "json"] }
