[package]
name = "stash-lookup"
version = "0.1.0"
edition = "2024"

[profile.release]
opt-level = "z"
lto = true
codegen-units = 1
strip = true

[dependencies]
axum = { version = "0.8", features = ["http1", "json", "matched-path", "tokio"], default-features = false }
sqlx = { version = "0.8", features = ["runtime-tokio", "sqlite", "migrate", "macros", "uuid"], default-features = false }
tokio = { version = "1", features = ["rt-multi-thread", "net", "macros", "signal"], default-features = false }
uuid = { version = "1", features = ["serde"], default-features = false }
serde = { version = "1", features = ["derive"], default-features = false }
serde_json = { version = "1.0", features = ["alloc"], default-features = false }
anyhow = { version = "1.0", default-features = false }
reqwest = { version = "0.12", features = ["rustls-tls", "json"], default-features = false }
